# rewriter

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Init.bat  Nyaight.sln  README.md  ReWriter.sln  Rewriter.sln
.github/workflows/: Build.yml
CMake/: CompileShader.cmake  Module.cmake
Client/: BrushPool.cpp  BrushPool.h  Button.cpp  Button.h  Camera.cpp  Camera.h  Client.vcxproj  Client.vcxproj.filters  ClientApp.cpp  ClientApp.h  Common.h  Common.hlsli  ConstantBuffer.h  Defines.h  EditCtrl.cpp  EditCtrl.h  EventManager.cpp  EventManager.h  Font.cpp  Font.h  FontPool.cpp  FontPool.h  GameApp.cpp  GameApp.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  Image.cpp  Image.h  ImageLoader.cpp  ImageLoader.h  InputThread.cpp  InputThread.h  KeyWorkerThread.cpp  KeyWorkerThread.h  KeyboardThread.cpp  KeyboardThread.h  Label.cpp  Label.h  (+65 more)
Client/Data/: Login.nyt  Main.nyt
Common/: CenterServer.cpp  CenterServer.h  Delegate.h  Event.h  ImguiEx.cpp  ImguiEx.h  Network.h  Packet.cpp  Packet.h  Protocol.h  ServerSocket.cpp  ServerSocket.h  Singleton.h  Socket.cpp  Socket.h  Stdafx.h  StringTable.h  Time.cpp  Time.h  Timer.cpp  Timer.h  Type.h  Types.cpp  Types.h  Util.cpp  Util.h
DataEditor/: DataEditor.csproj  Program.cs
DataEditor/Common/: NytNode.cs
DataEditor/Form/: FileViewForm.Designer.cs  FileViewForm.cs  MainForm.cs
Database/: Connection.cpp  Database.vcxproj  Database.vcxproj.filters  DllMain.cpp  Stdafx.h
Database/Include/: DBResult.h
Database/include/: Connection.h
DirectX/: WICTextureLoader12.cpp
Editor/: AddNodeForm.cs  DataEditor.csproj  Editor.csproj  Editor.sln  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs
Editor/Common/: NytCommon.cs  NytNode.cs  NytTreeNode.cs  NytTreeNodeInfo.cs  NytTreeView.cs
Editor/Form/: AddNodeForm.Designer.cs  AddNodeForm.cs  FileViewForm.Designer.cs  FileViewForm.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  NodeEditForm.Designer.cs  NodeEditForm.cs  NodeForm.Designer.cs  NodeForm.cs
Editor/NytTreeView/: NytTreeNode.cs  NytTreeView.cs  NytTreeViewForm.Designer.cs  NytTreeViewForm.cs
Editor/Properties/: AssemblyInfo.cs
Game/CenterServer/: App.cpp  App.h  CenterServer.vcxproj  CenterServer.vcxproj.filters  LoginServer.cpp  LoginServer.h  Main.cpp  Server.cpp  Server.h  ServerAcceptor.cpp  ServerAcceptor.h  ServerSocket.cpp  ServerSocket.h  ServerSocket_Login.cpp  SocketManager.cpp  SocketManager.h  Stdafx.h
Game/Client/: App.cpp  App.h  BrushPool.cpp  Button.cpp  Button.h  Camera.cpp  Camera.h  Client.vcxproj  Client.vcxproj.filters  ClientApp.cpp  ClientApp.h  Common.hlsli  ConstantBuffer.h  Context.cpp  Context.h  Control.cpp  Control.h  DXUtil.h  DebugWindow.cpp  DebugWindow.h  EditCtrl.cpp  EventManager.cpp  EventManager.h  Font.cpp  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  Image.cpp  Image.h  Label.cpp  LocalSocket.cpp  LocalSocket.h  LoginScene.cpp  LoginScene.h  LoginServer.cpp  LoginServer.h  LoginWindow.cpp  LoginWindow.h  LoginWnd.cpp  (+63 more)
Game/Common/: Packet.h  Request.cpp  Request.h  StringTable.h  Time.cpp  Time.h  (+2 more)
LoginServer/: ClientSocket.cpp  ClientSocket.h  DBThread.cpp  DBThread.h  IOCPThread.cpp  IOCPThread.h  LoginApp.cpp  LoginApp.h  LoginServer.vcxproj  LoginServer.vcxproj.filters  Stdafx.h  User.cpp  imgui.ini
Module/: CMakeLists.txt
Module/Database/: CMakeLists.txt  Connection.cpp  Connection.h  Database.cpp  Database.h  Database.vcxproj  Database.vcxproj.filters  DllMain.cpp  Login.cpp  Login.h  Query.cpp  Query.h  Session.cpp  Stdafx.h  Types.h
Module/Database/Include/: Connection.h  Lib.h  Login.h  Types.h
Module/Database/Include/Database/: Query.h
Module/Database/Src/: Database.cpp
Module/Database/StoredProcedures/: Login.sql  Register.sql
Module/Graphics/: CMakeLists.txt  DllMain.cpp  Font.cpp  Font.h  Global.cpp  Global.h  Globals.cpp  Globals.h  Graphics.cpp  Graphics.vcxproj  Graphics.vcxproj.filters  Graphics2D.cpp  Graphics2D.h  Graphics3D.cpp  Graphics3D.h  GraphicsImGui.cpp  GraphicsImGui.h  Stdafx.h
Module/Graphics/Include/: Lib.h
Module/Graphics/Include/Graphics/: Graphics.h  Graphics2D.h  Graphics3D.h  GraphicsImGui.h  ImGui.h  ImGuiFileDialog.h
Module/Graphics/Src/: Context.cpp  Context.h  Descriptor.cpp  Descriptor.h  DescriptorManager.cpp  DllMain.cpp  Graphics.cpp  Graphics2D.cpp  Graphics3D.cpp  GraphicsImGui.cpp  ImGui.cpp  ImGuiFileDialog.cpp  Pch.h  PipelineState.cpp  PipelineState.h  SwapChain.cpp  SwapChain.h
Module/Graphics/Src/Shader/: Model.ps.h  Model.vs.h
Module/Resource/: CMakeLists.txt  DllMain.cpp  Global.cpp  Global.h  Image.cpp  Image.h  Manager.cpp  Manager.h  PNG.cpp  PNG.h  Property.cpp  Property.h  README.md  Resource.cpp  Resource.h  Resource.vcxproj  Resource.vcxproj.filters  ResourceManager.cpp  Sprite.cpp  Sprite.h  Stdafx.h  Texture.cpp  Texture.h
Module/Resource/Include/: Image.h  Lib.h  Manager.h  Property.h  ResourceManager.h
Module/Resource/Include/Resource/: Model.h  Property.h  Resource.h  Sprite.h
Module/Resource/Src/: Delegates.cpp  Delegates.h  Manager.cpp  Manager.h  Pch.h  Property.cpp  Resource.cpp
Script/: MakeDataSymlink.py
Scripts/: CreateDataLinks.bat  MakeDataSymlink.py
Src/Game/Client/: App.cpp  App.h  Button.cpp  Button.h  CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters  Control.cpp  Default.hlsl  Delegates.h  Line.hlsl  LoginScene.cpp  LoginScene.h  LoginServer.cpp  LoginServer.h  LoginWindow.cpp  LoginWindow.h  Main.cpp  Modal.h  Object.cpp  Object.h  Pch.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SocketManager.cpp  SocketManager.h  Stdafx.h  TextBlock.cpp  TextBlock.h  TextBox.cpp  TextBox.h  UI.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
Src/Tool/Editor/: App.cpp  App.h  CMakeLists.txt  Clipboard.cpp  Clipboard.h  Delegates.cpp  Delegates.h  Desktop.cpp  Desktop.h  Editor.vcxproj  Editor.vcxproj.filters  Explorer.cpp  Explorer.h  FbxHandler.cpp  FbxHandler.h  Hierarchy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h  Main.cpp  Pch.h  Stdafx.h  UIEditor.cpp  UIEditor.h  Viewport.cpp  Viewport.h
(+262 files in other folders)
